[package]
name = "libdns"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", optional = true, default-features = false, features = ["http2", "json"]}
serde = { version = "1.0.197", optional = true, features = ["derive"] }

[features]
default = ["default-tls"]

hetzner = ["dep:serde", "dep:reqwest"]

default-tls = ["reqwest?/default-tls"]
rustls-tls = ["reqwest?/rustls-tls"]
native-tls = ["reqwest?/native-tls"]
native-tls-vendored = ["reqwest?/native-tls-vendored"]
