[package]
name = "libdns"
version = "0.1.1"
authors = ["Lukas Schulte Pelkum <lockas.sp@proton.me>"]
edition = "2021"
description = "Abstracting and implementing DNS zone management for different providers"
repository = "https://github.com/lus/libdns-rs"
license = "0BSD"
keywords = ["dns", "zone", "abstract"]
categories = ["api-bindings"]

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["http2", "json"]}
serde = { version = "1.0.197", optional = true, features = ["derive"] }

[features]
default = ["default-tls"]

hetzner = ["serde", "dep:reqwest"]

default-tls = ["reqwest?/default-tls"]
rustls-tls = ["reqwest?/rustls-tls"]
native-tls = ["reqwest?/native-tls"]
native-tls-vendored = ["reqwest?/native-tls-vendored"]
